Header y footer modificados

--- a/index.html
+++ b/index.html
@@ -11,7 +11,41 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    
+    <!-- Header -->
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+          <a class="navbar-brand" href="#">
+              <img src="assets/platzi-logo.png" alt="Platzi logo">
+              Conf Hawaii
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">La conferencia</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Los oradores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">El lugar y la fecha</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Conviertete en orador</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-platzi" href="#">Comprar tickets</a>
+                </li>
+              </ul>
+            </div>
+      </div>
+      </nav>
+    <!-- Header -->
+
+    <!-- Footer -->
     <footer id="footer" class="p-1">
       <div class="container">
         <div class="row text-center">
@@ -36,6 +70,7 @@
         </div>
       </div>
     </footer>
+    <!-- Footer -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
