--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
       </div>
       </nav>
     <!-- Header -->
+    <!-- Main -->
+    <main id="main">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="assets/hawaii.jpg" alt="Hawaii 1">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/hawaii2.jpg" alt="Hawaii 2">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/hawaii3.jpeg" alt="Hawaii 3">
+              </div>
+            </div>
+          </div>
+    </main>
+    <!-- Main -->
 
     <!-- Footer -->
     <footer id="footer" class="p-1">
