--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Header -->
     <!-- Main -->
     <main id="main">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/hawaii.jpg" alt="Hawaii 1">
@@ -56,6 +56,23 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="assets/hawaii3.jpeg" alt="Hawaii 3">
+              </div>
+            </div>
+            <div class="overlay">
+              <div class="container">
+                <div class="row align-items-center">
+                  <div class="col-md-6 offset-md-6 text-center text-md-right">
+                    <h1>Platzi Conf Hawaii</h1>
+                    <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
+                      compartir con nuestra comunidad el conocimiento y experiencia
+                      de los expertos que estan creando el futuro de internet.
+                      Ven a conocer a miembros del team platzi, a otros estudiantes de platzi y a los oradores de primer nivel
+                      que tenemos para ti. Te esperamos!
+                    </p>
+                    <a href="#"> Quiero ser orador</a>
+                    <button type="button">Comprar tickets</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
