Agregando cards and badges

--- a/index.html
+++ b/index.html
@@ -78,7 +78,61 @@
           </div>
     </main>
     <!-- Main -->
-
+    <!-- Cards Speakers -->
+    <section id="speakers" class="mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center text-uppercase">
+            <small>Conoce a los</small>
+            <h2>Speakers</h2>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 mb-4">
+              <div class="card">
+                <img class="card-img-top" src="assets/sacha.jpg" alt="Foto sacha">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="badge badge-warning">Javascript</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 mb-4">
+              <div class="card">
+                <img class="card-img-top" src="assets/cvander.jpeg" alt="Foto sacha">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="badge badge-primary">Start up</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 mb-4">
+              <div class="card">
+                <img class="card-img-top" src="assets/freddy.jpeg" alt="Foto sacha">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="badge badge-success">IoT</span>
+                  <span class="badge badge-info">React</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 mb-4">
+              <div class="card">
+                <img class="card-img-top" src="assets/leonidas2.jpeg" alt="Foto sacha">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="badge badge-danger">Desarrollo Web</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Cards Speakers -->
     <!-- Footer -->
     <footer id="footer" class="p-1">
       <div class="container">
