Agregando seccion de lugar y fecha

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Hello, world!</title>
+    <title>Inicio Conf Hawaii</title>
   </head>
   <body>
     <!-- Header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark shadow sticky-top">
       <div class="container">
           <a class="navbar-brand" href="#">
               <img src="assets/platzi-logo.png" alt="Platzi logo">
@@ -42,7 +42,7 @@
               </ul>
             </div>
       </div>
-      </nav>
+    </nav>
     <!-- Header -->
     <!-- Main -->
     <main id="main">
@@ -133,6 +133,26 @@
       </div>
     </section>
     <!-- Cards Speakers -->
+    <!-- Lugar y fecha -->
+    <section id="place-time">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-lg-6 pl-0 pr-0">
+            <img src="assets/honolulu.jpg" alt="Honolulu">
+          </div>
+          <div class="col-12 col-lg-6 pt-2 pb-2 align-self-center">
+              <h2>Honolulu - Octubre 2025</h2>
+              <p>Honolulu o Honolulú es la capital y localidad más grande del
+                estado de Hawái, en los Estados Unidos. Honolulu es lamás sureña de entre las principales ciudades estadounidenses. 
+                Aunque el nombre de Honolulu se refiere al área urbana enla costa sureste dela isla de Oahu, 
+                la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
+              </p>
+              <a href="https://es.wikipedia.org/wiki/Honolulu" class="btn btn-outline-light" target="_blank">Conoce más</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Lugar y fecha -->
     <!-- Footer -->
     <footer id="footer" class="p-1">
       <div class="container">
