--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark shadow sticky-top">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="#">
               <img src="assets/platzi-logo.png" alt="Platzi logo">
@@ -23,7 +23,7 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav ml-auto align-items-center">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">La conferencia</a>
                 </li>
@@ -153,6 +153,69 @@
       </div>
     </section>
     <!-- Lugar y fecha -->
+    <!-- Conviertete en orador -->
+    <section id="conviertete-en-orador" class="pt-4 pb-4">
+        <div class="container">
+          <div class="row">
+            <div class="col text-uppercase text-center">
+              <small>Conviértete en un</small>
+              <h2>Orador</h2>
+            </div>
+          </div>
+          <div class"row">
+            <div class="col text-center">
+              Anótate como orador para darnos una charla ignite.
+              Cuéntanos de qué quieres hablar!
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-md-8 offset-md-2 col-lg-8 offset-lg-2 pt-2">
+              <form class="needs-validation" novalidate>
+                <div class="form-row">
+                  <div class="form-group col-12 col-md-6">
+                    <input type="text"class="form-control" placeholder="Nombre" required>
+                    <div class="valid-feedback">
+                      Correcto!!
+                    </div>
+                    <div class="invalid-feedback">
+                      Por favor ingresa tu nombre.
+                    </div>
+                  </div>
+                  <div class="form-group col-12 col-md-6">
+                    <input type="text"class="form-control" placeholder="Apellido" required>
+                    <div class="valid-feedback">
+                      Correcto!!
+                    </div>
+                    <div class="invalid-feedback">
+                      Por favor ingresa tu apellido.
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col">
+                    <textarea class="form-control form-control-lg" placeholder="Sobre qué quieres hablar?" required></textarea>
+                    <div class="valid-feedback">
+                      Correcto!!
+                    </div>
+                    <div class="invalid-feedback">
+                      Debes de escribir sobre qué quieres hablar.
+                    </div>
+                    <small class="form-text text-muted">
+                      Recuerda incluir un título a tu charla.
+                    </small>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="col">
+                    <button type="submit"class="btn btn-platzi btn-block">Enviar</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- Conviertete en orador -->
     <!-- Footer -->
     <footer id="footer" class="p-1">
       <div class="container">
@@ -184,5 +247,25 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation')
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function(form) {
+              form.addEventListener('submit', function(event) {
+                if (form.checkValidity() === false) {
+                  event.preventDefault()
+                  event.stopPropagation()
+                }
+                form.classList.add('was-validated')
+              }, false)
+            })
+          }, false)
+        })()
+    </script>
   </body>
 </html>
