--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container">
           <a class="navbar-brand" href="#">
               <img src="assets/platzi-logo.png" alt="Platzi logo">
@@ -57,23 +57,23 @@
               <div class="carousel-item">
                 <img class="d-block w-100" src="assets/hawaii3.jpeg" alt="Hawaii 3">
               </div>
-            </div>
-            <div class="overlay">
-              <div class="container">
-                <div class="row align-items-center">
-                  <div class="col-md-6 offset-md-6 text-center text-md-right">
-                    <h1>Platzi Conf Hawaii</h1>
-                    <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
-                      compartir con nuestra comunidad el conocimiento y experiencia
-                      de los expertos que estan creando el futuro de internet.
-                      Ven a conocer a miembros del team platzi, a otros estudiantes de platzi y a los oradores de primer nivel
-                      que tenemos para ti. Te esperamos!
-                    </p>
-                    <a href="#" class="btn btn-outline-light"> Quiero ser orador</a>
-                    <button type="button" class="btn btn-platzi">Comprar tickets</button>
+              <div class="overlay">
+                  <div class="container">
+                    <div class="row align-items-center">
+                      <div class="col-md-6 offset-md-6 text-center text-md-right">
+                        <h1>Platzi Conf Hawaii</h1>
+                        <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
+                          compartir con nuestra comunidad el conocimiento y experiencia
+                          de los expertos que estan creando el futuro de internet.
+                          Ven a conocer a miembros del team platzi, a otros estudiantes de platzi y a los oradores de primer nivel
+                          que tenemos para ti. Te esperamos!
+                        </p>
+                        <a href="#" class="btn btn-outline-light"> Quiero ser orador</a>
+                        <button type="button" class="btn btn-platzi">Comprar tickets</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
     </main>
@@ -86,6 +86,7 @@
             <small>Conoce a los</small>
             <h2>Speakers</h2>
           </div>
+        </div>
           <div class="row">
             <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 mb-4">
               <div class="card">
@@ -129,7 +130,6 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
     </section>
     <!-- Cards Speakers -->
