--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Inicio Conf Hawaii</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#navbar" data-offset="57">
     <!-- Header -->
     <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container">
@@ -18,23 +18,23 @@
               <img src="assets/platzi-logo.png" alt="Platzi logo">
               Conf Hawaii
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbar">
               <ul class="navbar-nav ml-auto align-items-center">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">La conferencia</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="#main">La conferencia</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Los oradores</a>
+                  <a class="nav-link" href="#speakers">Los oradores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">El lugar y la fecha</a>
+                    <a class="nav-link" href="#place-time">El lugar y la fecha</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Conviertete en orador</a>
+                    <a class="nav-link" href="#conviertete-en-orador">Conviertete en orador</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-platzi" href="#">Comprar tickets</a>
