--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#conviertete-en-orador">Conviertete en orador</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-platzi" href="#">Comprar tickets</a>
+                    <a class="nav-link text-platzi" href="#modalCompra" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
                 </li>
               </ul>
             </div>
@@ -69,7 +69,7 @@
                           que tenemos para ti. Te esperamos!
                         </p>
                         <a href="#" class="btn btn-outline-light"> Quiero ser orador</a>
-                        <button type="button" class="btn btn-platzi">Comprar tickets</button>
+                        <button type="button" class="btn btn-platzi" href="#modalCompra" data-toggle="modal" data-target="#modalCompra">Comprar tickets</button>
                       </div>
                     </div>
                   </div>
@@ -242,6 +242,30 @@
       </div>
     </footer>
     <!-- Footer -->
+
+    <!-- Modal -->
+    <!-- Button trigger modal -->
+      <!-- Modal -->
+      <div class="modal fade" id="modalCompra" tabindex="-1" role="dialog" aria-labelledby="modalCompraTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalCompraTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- Modal -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
